--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,9 @@
 cmake_minimum_required(VERSION 3.0)
-# Change compiler to GCC to support OpenMP
-if( USE_GCC )
-set( CMAKE_C_COMPILER /opt/local/bin/gcc-mp-4.9 )
-set( CMAKE_CXX_COMPILER /opt/local/bin/g++-mp-4.9 )
-message(Building\ with\ GCC\ to\ include\ OpenMP\ support)
-else()
-set(CMAKE_CXX_FLAGS "-stdlib=libstdc++ ${CMAKE_CXX_FLAGS}")
-message(Building\ with\ CLANG\) )
-endif()
+# Change compiler to your prefereti compier
+#set( CMAKE_C_COMPILER <path-to-your-c-compiler> )
+#set( CMAKE_CXX_COMPILER <path-to-your-c++-compiler> )
 
 project( wisardlib-cxx_3.0 )
-
 
 set(LIBRARY_NAME wisard-cxx_3.0)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
