--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 # Change compiler to your prefereti compier
-set( CMAKE_C_COMPILER /opt/local/bin/gcc-mp-5 )
-set( CMAKE_CXX_COMPILER /opt/local/bin/g++-mp-5 )
+#set( CMAKE_C_COMPILER /opt/local/bin/gcc-mp-5 )
+#set( CMAKE_CXX_COMPILER /opt/local/bin/g++-mp-5 )
 
 project( wisardlib-cxx_3.0 )
 
